syntax = "proto3";

package bid;

// The bidder service definition
service Bidder {
  // Sends a response
  rpc Bid(BidRequest) returns (BidResponse) {}
}

// The request containing a user's identifier
message BidRequest {
  string user_identifier = 1;
}

// The response containing a bid or no-bid
message BidResponse {
  bool bid = 1;
}
